--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.firstmod.pink_garnet": "Pink Garnet",
-  "item.firstmod.raw_pink_garnet": "Raw Pink Garnet"
+  "item.firstmod.raw_pink_garnet": "Raw Pink Garnet",
+
+  "block.firstmod.pink_garnet_block": "Block of Pink Garnet",
+  "block.firstmod.raw_pink_garnet_block": "Block of Raw Pink Garnet"
 }
