--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -3,5 +3,8 @@
   "item.firstmod.raw_pink_garnet": "Raw Pink Garnet",
 
   "block.firstmod.pink_garnet_block": "Block of Pink Garnet",
-  "block.firstmod.raw_pink_garnet_block": "Block of Raw Pink Garnet"
+  "block.firstmod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
+
+  "itemgroup.firstmod.pink_garnet_items": "Pink Garnet Items",
+  "itemgroup.firstmod.pink_garnet_blocks": "Pink Garnet Blocks"
 }
